# market-data-streaming-service

./: Cargo.toml  README.md  build.rs
docker/: docker-compose.yml
market-data-publisher/: Cargo.toml  README.md
market-data-publisher/src/: main.rs  producer.rs
market-data-publisher/src/utils/: args_parser.rs  data_factory.rs  mod.rs
market-data-server/: Cargo.toml
market-data-server/proto/: service.proto
market-data-server/src/: main.rs
market-data-server/src/server/: mod.rs
market-data-server/src/utils/: mod.rs  nats_consumer.rs
proto/: service.proto
shared/: Cargo.toml
shared/src/: enums.rs  lib.rs  models.rs  serializer.rs  serializer_factory.rs
src/: main.rs
src/proto/: mod.rs
src/server/: config.rs  mod.rs
src/utils/: mod.rs
