[package]
name = "market-data-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.35.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.2"
fake = { version = "2.9.2", features = ["derive"] }
log = "0.4.21"
prost = "0.12.3"
rand = "0.8.5"
rmp = "^0.8"
rmp-serde = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.11.0"
tonic-reflection = { version = "0.11.0" }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"

shared = { path = "../shared" }

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Enable serialization/deserialization with Serde
]

[build-dependencies]
tonic-build = "0.11.0"
